<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.storieswithfriends.fragment.MainMenuFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_mainMenuTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="@string/text_its_your_turn_stories"
        android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
        android:textStyle="bold"
        android:textSize="@dimen/abc_action_bar_title_text_size"
        android:textColor="@color/button_background"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/listView_yourturnstories"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />
    <TextView
        android:id="@+id/empty_yourturn_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:textSize="15sp"
        android:text="@string/emptyYourTurnList" >
    </TextView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_unfinishedstories"
        android:id="@+id/btn_unfinishedstories"
        android:textColor="@android:color/white"
        android:background="@drawable/purple_button_selector"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_past_stories"
        android:id="@+id/btn_paststories"
        android:textColor="@android:color/white"
        android:background="@drawable/purple_button_selector"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

</LinearLayout>